# cosecre

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  seed_users.json
backend/src/backend/: __init__.py  bootstrap.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/src/backend/api/: __init__.py  auth.py  invoices.py  settings.py
backend/src/backend/services/: openai_service.py  sheets_service.py  storage.py
backend/src/backend/tests/: test_ai_status.py  test_auth.py  test_invoice_sheet_sync.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShell.vue  CameraCapture.vue  InvoiceUploadCard.vue  StatusPill.vue
frontend/src/composables/: useAuth.ts  useExtractionTracker.ts
frontend/src/router/: index.ts
frontend/src/views/: InboxView.vue  InvoiceDetailView.vue  LoginView.vue  SettingsView.vue
